--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li><p><a href="https://joeyoungmin.github.io/homework/md/about-me.html">1주차과제</a></p></li>
+        <li><p><a href="https://joeyoungmin.github.io/homework/md/about-me">1주차과제</a></p></li>
         <li><p><a href="https://joeyoungmin.github.io/homework/avatars/avatars.html">2주차과제</a></p></li>
     </ul>
 </body>
