--- a/index.html
+++ b/index.html
@@ -26,17 +26,10 @@
     </style>
 </head>
 <body>
-<<<<<<< HEAD
-
-    <button>버튼 1</button>
-    <button>버튼 2</button>
-    <button>버튼 3</button>
-
-=======
     <ul>
         <li><p><a href="https://joeyoungmin.github.io/homework/md/about-me">1주차과제</a></p></li>
         <li><p><a href="https://joeyoungmin.github.io/homework/avatars/avatars.html">2주차과제</a></p></li>
+        <li><p><a href="https://joeyoungmin.github.io/homework/login/login.html">3주차과제</a></p></li>
     </ul>
->>>>>>> c5cc11866f2d2016f36d99d24fb75853ac55cf07
 </body>
 </html>
